--- a/ikarus_base/requirements.txt
+++ b/ikarus_base/requirements.txt
@@ -1,121 +1,15 @@
-BTrees==4.0.5
-Chameleon==2.11
-Django==1.4.3
-Flask==0.10.1
-GitPython==0.3.2.RC1
-Jinja2==2.6
-Mako==0.7.3
-MarkupSafe==0.15
-PAM==0.4.2
-Paste==1.7.5.1
-PasteDeploy==1.5.0
-PasteScript==1.7.5
-Pillow==2.0.0
-PyYAML==3.10
-Pygments==1.6
-Sphinx==1.2b1
-Twisted-Core==12.3.0
-Twisted-Names==12.3.0
-Twisted-Web==12.3.0
-WebOb==1.2.3
-WebTest==2.0.11
-Werkzeug==0.9.4
-ZConfig==3.0.3
-ZEO==4.0.0a1
-ZODB==4.0.0a4
-ZODB3==3.11.0a3
-adium-theme-ubuntu==0.3.3
-apt-xapian-index==0.45
+Django==1.5.7
+PIL==1.1.7
+Pillow==2.4.0
+-e git://github.com/jonashagstedt/bootstrap3-django-admin.git@481b8ed3c3162e9ee08170b6f7b140623b502890#egg=admin_bootstrap3-master
 argparse==1.2.1
-async==0.6.1
-beautifulsoup4==4.3.2
-boto==2.22.1
-calendar-indicator==0.2.0
-chardet==2.0.1
-configglue==1.0
-cornice==0.13
-coverage==3.7.1
-debtagshw==0.1
-defer==1.0.6
-dicttoxml==1.3.1
-dirspec==4.2.0
-distribute==0.7.3
-django-browserid==0.10.1
-django-classy-tags==0.5.1
-django-missing==0.1.11
-django-mongo-auth==0.1.2
+django-appconf==0.6
+django-compressor==1.3
+django-crispy-forms==1.4.0
 django-mongodb-engine==0.5.1
-django-sekizai==0.7
 djangotoolbox==1.6.2
-docutils==0.10
-duplicity==0.6.21
-fancy-tag==0.2.0
-freezegun==0.1.11
-gitdb==0.5.4
-httplib2==0.7.7
-httpretty==0.7.1
-itsdangerous==0.23
-lxml==3.1.0
-mercurial==2.2.2
-mock==1.0.1
 mongoengine==0.8.7
-moto==0.2.16
-nose==1.3.0
-nosexcover==1.0.8
-oauthlib==0.3.7
-onctuous==0.5.84
-oneconf==0.3.3
-persistent==4.0.6
-pexpect==2.4
-piston-mini-client==0.7.5
-protobuf==2.4.1
-pyOpenSSL==0.13
-pyasn1==0.1.7
-pycrypto==2.6
-pycups==1.9.62
-pycurl==7.19.0
-pygobject==3.8.0
-pygpgme==0.3
-pyinotify==0.9.3
+mongoengine-extras==0.0.1
 pymongo==2.7
-pyramid==1.4.1
-pyramid-appengine==0.8.2-a2
-pyserial==2.6
-pysmbc==1.0.13
-python-apt==0.8.8ubuntu6
-python-coveralls==1.1
-python-dateutil==2.2
-python-debian==0.1.21-nmu2ubuntu1
-pyxdg==0.25
-reportlab==2.6
-repoze.lru==0.6
-requests==2.2.0
-rhythmbox-ubuntuone==4.2.0
-rsa==3.1.2
-sessioninstaller==0.0.0
-simplejson==3.3.2
-six==1.2.0
-smmap==0.8.2
-software-center-aptd-plugins==0.0.0
-stevedore==0.13
-sure==1.2.3
-system-service==0.1.6
-transaction==1.4.1
-translationstring==1.1
-tweepy==2.3.0
-ubuntuone-storage-protocol==4.2.0
-unity-lens-photos==0.9
-urllib3==1.7.1
-venusian==1.0a8
-virtualenv==1.10.1
-virtualenv-clone==0.2.4
-virtualenvwrapper==4.2
-waitress==0.8.8
+six==1.6.1
 wsgiref==0.1.2
-xdiagnose==3.5.1
-xmltodict==0.8.3
-yanc==0.2.4
-zc.lockfile==1.1.0
-zdaemon==4.0.0a1
-zope.deprecation==4.0.2
-zope.interface==4.0.5
